# techologiesDIHT

./: README.md
bad_singltone/: CMakeLists.txt  main.cpp  single.h
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/A/: script.py
cmake/B/: main.cpp
llvm_decoder/: prog  solve.cpp
vector/: check.cpp  info.txt  prog
vector/prog.dSYM/Contents/Resources/DWARF/: prog
